# crypto-backtesting-engine

./: .gitignore  README.md  clickhouse_schema.sql  docker-compose.yml
execution/: CMakeLists.txt  Makefile  README.md
execution/include/: aggregator_concept.hpp  engine.hpp  strategy_concept.hpp  types.hpp
execution/include/aggregators/: README.md  simple_aggregator.hpp
execution/include/io/: clickhouse_reader.hpp
execution/include/strategies/: README.md  momentum.hpp
execution/src/: main.cpp
execution/src/io/: clickhouse_reader.cpp
ingestion/: go.mod
ingestion/cmd/feed_handler/: main.go
ingestion/internal/models/: model.go
ingestion/internal/repository/: clickhouse.go
ingestion/internal/respository/: clickhouse.go
ingestion/internal/service/: ingester.go
ingestion/pkg/logger/: hooks.go  logger.go
